src/test/deca/context/valid/provided/valid_bool_9.deca
//Descriptif:Combinaison avec des flottants

{
  float a = 5.5;
  float b = 10.1;

  // Comparaisons et opérations logiques
  (a < b) && (a > 0.0); // true
  (a == 5.5) || (b < 5.0); // true
  (a >= 10.0) || (b <= 10.1); // true
  !(a < b) && (b > 15.0); // false
}
